changed project structure with packages